--- a/app/views/chats/show.html.slim
+++ b/app/views/chats/show.html.slim
@@ -6,7 +6,7 @@
       = render 'guest', message: message
 
 .chat-form: .container: .chat-container--no-padding
-  = form_for @chat.messages.build, url: chats_messages_path(@bot.token), remote: true do |f|
+  = form_for @chat.messages.build, url: chats_messages_path(@bot.token), data: { remote: true, event_name: 'Create chat message', bot_id: @bot.id, bot_name: @bot.name, chat_id: @chat.id } do |f|
     = f.text_field :body, placeholder: '質問を入れてください', hide_label: true, class: 'chat-form__text-field'
     = f.button class: 'chat-form__submit', id: 'chat-submit' do
       span.visible-sm.visible-md.visible-lg 質問
