--- a/app/views/answers/edit.html.slim
+++ b/app/views/answers/edit.html.slim
@@ -3,11 +3,11 @@
     h4 回答
 
   .panel-body
-    = bootstrap_form_for @answer, url: bot_answer_path(@bot, @answer), method: :patch do |f|
+    = bootstrap_form_for @answer, url: bot_answer_path(@bot, @answer), method: :patch, data: { event_name: 'Update answer', answer_id: @answer.id, bot_id: @bot.id, bot_name: @bot.name } do |f|
       = f.text_field :headline
       = f.text_area :body
       = f.submit class: 'btn btn-success'
       | &nbsp;
-      = link_to '削除する', [@bot, @answer], method: :delete, class: 'btn btn-danger', data: { confirm: '回答データを削除します。よろしいですか？' }
+      = link_to '削除する', [@bot, @answer], method: :delete, class: 'btn btn-danger', data: { confirm: '回答データを削除します。よろしいですか？', event_name: 'Delete answer', answer_id: @answer.id, bot_id: @bot.id, bot_name: @bot.name }
 
-= link_to t('helpers.link.back'), bot_answers_path(@bot), class: "btn btn-default"
+= link_to t('helpers.link.back'), bot_answers_path(@bot), class: "btn btn-default", data: { event_name: 'Back to answer index', answer_id: @answer.id, bot_id: @bot.id, bot_name: @bot.name }
