--- a/app/views/bots/edit.html.erb
+++ b/app/views/bots/edit.html.erb
@@ -8,4 +8,4 @@
   </div>
 </div>
 
-<%= link_to t('helpers.link.back'), bots_path, class: "btn btn-default" %>
+<%= link_to t('helpers.link.back'), bots_path, class: "btn btn-default", data: { event_name: 'Back to bots index', bot_id: @bot.id, bot_name: @bot.name } %>
