--- a/app/views/bots/index.html.erb
+++ b/app/views/bots/index.html.erb
@@ -10,7 +10,7 @@
           <div class="caption">
             <h4><%= bot.name %></h4>
             <!-- <p>...</p> -->
-            <%= link_to '詳細', edit_bot_path(bot), class: 'btn btn-primary btn-block' %>
+            <%= link_to '詳細', edit_bot_path(bot), class: 'btn btn-primary btn-block', data: { event_name: 'Select Bot', bot_id: bot.id, bot_name: bot.name } %>
           </div>
         </div>
       </div>
