--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,7 @@
     <h4>パスワード変更</h4>
   </div>
   <div class="panel-body">
-    <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+    <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }, data: { event_name: 'Update password' }) do |f| %>
       <div class="form-group">
         <%= f.label :password %>
         <%= f.password_field :password, :autocomplete => "off", class: "form-control" %>
