--- a/app/views/question_answers/index.html.slim
+++ b/app/views/question_answers/index.html.slim
@@ -1,6 +1,6 @@
 h1 Q&A管理
 .text-right
-  = link_to t('helpers.link.new'), new_bot_question_answer_path(@bot), class: "btn btn-default"
+  = link_to t('helpers.link.new'), new_bot_question_answer_path(@bot), class: "btn btn-default", data: { event_name: 'Open new question answer', bot_id: @bot.id, bot_name: @bot.name }
 table.table.table-striped
   thead
     tr
@@ -19,6 +19,6 @@ table.table.table-striped
               li = decision_branch.body
 
         td nowrap="nowrap"
-          = link_to t('helpers.link.edit'), edit_bot_question_answer_path(@bot, question_answer), class: "btn btn-default"
-          = link_to t('helpers.link.destroy'), bot_question_answer_path(@bot, question_answer), method: :delete, data: { confirm: 'Q&Aを削除します。よろしいですか。' }, class: "btn btn-danger"
+          = link_to t('helpers.link.edit'), edit_bot_question_answer_path(@bot, question_answer), class: "btn btn-default", data: { event_name: 'Open edit question answer' bot_id: @bot.id, bot_name: @bot.name }
+          = link_to t('helpers.link.destroy'), bot_question_answer_path(@bot, question_answer), data: { confirm: 'Q&Aを削除します。よろしいですか。', method: :delete, event_name: 'Delete question answer', bot_id: @bot.id, bot_name: @bot.name }, class: "btn btn-danger"
 = paginate @question_answers
