--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -7,14 +7,16 @@
   <div class="col-sm-8 col-xs-9">
     <div class="col-sm-12 balloon-1-left balloon">
       <% if message.persisted? %>
-        <%= link_to bot_training_training_message_path(bot, message.training, message), method: :delete, class: "btn-message-remove btn btn-default btn-xs", data: { confirm: '以降のメッセージや、配下のメッセージも削除されますが、よろしいですか。' } do %><i class="glyphicon glyphicon-remove"></i><% end %>
+        <%= link_to bot_training_training_message_path(bot, message.training, message), class: "btn-message-remove btn btn-default btn-xs", data: { method: :delete, confirm: '以降のメッセージや、配下のメッセージも削除されますが、よろしいですか。', event_name: 'Delete traning message' } do %><i class="glyphicon glyphicon-remove"></i><% end %>
       <% end %>
       <%= training_last_message_anchor(messages, message, id: 'last-message') %>
 
       <%= bootstrap_form_for [bot, message.training, message] do |f| %>
         <div class="message-body-wrapper">
           <%= auto_link(simple_format(message.body), html: { target: '_blank' }) %>
-          <a href="javascript:void(0);"><i class="glyphicon glyphicon-pencil"></i></a>
+          <a href="javascript:void(0);" data-event-name="Edit training message" data-bot-id="<%= @bot.id %>" data-bot-name="<%= @bot.name %>">
+            <i class="glyphicon glyphicon-pencil"></i>
+          </a>
         </div>
 
         <div class="message-body-edit hidden">
@@ -38,7 +40,7 @@
 
         <% if message.try(:answer).try(:persisted?) %>
           <div class="pull-right">
-            <%= link_to edit_bot_answer_path(message.parent.bot, message.answer) do %>
+            <%= link_to edit_bot_answer_path(message.parent.bot, message.answer), data: { event_name: 'Edit answer from training', answer_id: message.answer.id } do %>
               <i class="glyphicon glyphicon-list-alt"></i>
             <% end %>
           </div>
@@ -52,7 +54,7 @@
             <% message.other_answers.each do |other_answer| %>
               <% if other_answer.headline.present? %>
               <li>
-                <%= link_to other_answer.headline, bot_training_questions_path(bot, message.training, training_message: { body: other_answer.headline, other_answer_id: other_answer.id }), method: :post %>
+                <%= link_to other_answer.headline, bot_training_questions_path(bot, message.training, training_message: { body: other_answer.headline, other_answer_id: other_answer.id }), data: { method: :post, event_name: 'Select other answer', answer_id: other_answer.id } %>
               </li>
               <% end %>
             <% end %>
@@ -70,7 +72,7 @@
       </ul>
       <% if message.try(:answer).try(:persisted?) %>
         <div class="links">
-          <%= link_to new_bot_training_answer_decision_branch_path(message.parent.bot, message.training, message.answer), remote: true, class: 'add-fields-link' do %><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 選択肢を追加する<% end %>
+          <%= link_to new_bot_training_answer_decision_branch_path(message.parent.bot, message.training, message.answer), class: 'add-fields-link', data: { remote: true, event_name: 'Add decision branch in training' } do %><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 選択肢を追加する<% end %>
         </div>
       <% end %>
     </div>
