--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Autoモード', '#', class: "btn btn-default #{params[:auto] == '1' ? 'active' : ''}", 'data-toggle' => 'button', id: 'btn-auto-mode' %>
+<%= link_to 'Autoモード', '#', class: "btn btn-default #{params[:auto] == '1' ? 'active' : ''}", 'data-toggle' => 'button', id: 'btn-auto-mode', data: { event_name: 'Toggle auto training mode', bot_id: @bot.id, bot_name: @bot.name } %>
 
 <div class="col-sm-8 col-sm-offset-2 chat-area">
   <% @training.training_messages.each do |training_message| %>
@@ -11,7 +11,7 @@
   <% end %>
 </div>
 
-<%= bootstrap_form_for @guest_training_message, url: bot_training_questions_path(@bot, @training) do |f| %>
+<%= bootstrap_form_for @guest_training_message, url: bot_training_questions_path(@bot, @training), data: { event_name: 'Create training message', bot_id: @bot.id, bot_name: @bot.name } do |f| %>
   <div class="col-sm-10 col-sm-offset-2 col-xs-12 text-center comment-area">
     <%= f.text_field :body, placeholder: '質問を入れてください', hide_label: true %>
     <%= f.submit '質問する', class: 'btn btn-default' %>
