--- a/app/views/word_mappings/_form.html.slim
+++ b/app/views/word_mappings/_form.html.slim
@@ -1,11 +1,13 @@
+- data = @word_mapping.persisted? ? { event_name: 'Update word mapping', word_mapping_id: @word_mapping.id } : { event_name: 'Create word mapping' }
+
 .row
   .col-md-6.col-xs-12
-    = bootstrap_form_for @word_mapping do |f|
+    = bootstrap_form_for @word_mapping, data: data do |f|
       = render "shared/errors", object: @word_mapping
-      
+
       = f.text_field :word
       = f.text_field :synonym
 
       .actions
         = f.submit class: 'btn btn-primary'
-        = link_to '戻る', word_mappings_path, class: 'btn btn-default'
+        = link_to '戻る', word_mappings_path, class: 'btn btn-default', data: { event_name: 'Back to word mapping index', word_mapping_id: @word_mapping.id }
