--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,9 @@
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <% #if Rails.env.production? %>
+  <% if Rails.env.production? %>
     <%= render 'layouts/shared/analytics/mixpanel' %>
-  <% #end %>
+  <% end %>
   <% if user_signed_in? %>
     <%= render 'layouts/shared/js_vars/current_user' %>
   <% end %>
