--- a/app/views/chats/_bot.html.slim
+++ b/app/views/chats/_bot.html.slim
@@ -1,3 +1,4 @@
+- bot = message.parent.bot
 .chat-row
   .chat-message
     .chat-message__icon
@@ -21,7 +22,7 @@
             - message.other_answers.each do |other_answer|
               - if other_answer.headline.present?
               li
-                = link_to other_answer.headline, chats_messages_path(message.parent.bot.token, message: { body: other_answer.headline, other_answer_id: other_answer.id }), method: :post, remote: true
+                = link_to other_answer.headline, chats_messages_path(bot.token, message: { body: other_answer.headline, other_answer_id: other_answer.id }), method: :post, remote: true
 
 - if message.answer.try(:decision_branches).try(:present?)
   .chat-row data-role="chat-decision-branches"
@@ -29,7 +30,7 @@
       .chat-decision-branches__title 回答を選択してください
       .chat-decision-branches__items
         - message.answer.decision_branches.each do |decision_branch|
-          = link_to choices_chats_path(message.parent.bot.token, decision_branch), data: { method: :post, remote: true, role: 'chat-decision-branch', event_name: 'Select decision branch', bot_id: @bot.id, bot_name: @bot.name, chat_id: @chat.id, decision_branch_id: decision_branch.id, message_id: message.id }, class: 'chat-decision-branches__item' do
+          = link_to choices_chats_path(bot.token, decision_branch), data: { method: :post, remote: true, role: 'chat-decision-branch', event_name: 'Select decision branch', bot_id: @bot.id, bot_name: @bot.name, chat_id: @chat.id, decision_branch_id: decision_branch.id, message_id: message.id }, class: 'chat-decision-branches__item' do
             = decision_branch.body
 
 - if message.similar_question_answers.present?
@@ -38,6 +39,7 @@
       .chat-decision-branches__title こちらの質問ではないですか？
       .chat-decision-branches__items
         - message.similar_question_answers.each do |question_answer|
-          / TODO
-          = link_to '#', method: :post,remote: true, class: 'chat-decision-branches__item' do
-            = question_answer.question
+          = form_for Message.new, url: chats_messages_path(bot.token), html: { id: "question-answer-form-#{question_answer.id}" }, data: { remote: true, event_name: 'Create chat message', bot_id: bot.id, bot_name: bot.name, chat_id: message.parent.id } do |f|
+            = f.hidden_field :body, value: question_answer.question, class: 'chat-form__text-field'
+            = link_to "javascript:$('#question-answer-form-#{question_answer.id}').submit()", class: 'chat-decision-branches__item' do
+              = question_answer.question
