--- a/app/views/bots/_form.html.erb
+++ b/app/views/bots/_form.html.erb
@@ -1,4 +1,4 @@
-<%= bootstrap_form_for(@bot, data: { event_name: "Update bot", bot_id: @bot.id, bot_name: @bot.name }) do |f| %>
+<%= bootstrap_nested_form_for(@bot, data: { event_name: "Update bot", bot_id: @bot.id, bot_name: @bot.name }) do |f| %>
   <%= render "shared/errors", object: @bot %>
 
   <%= f.text_field :name %>
@@ -20,6 +20,30 @@
     </div>
     <%= text_field_tag :embed, bot_embed_code(@bot), class: 'form-control', readonly: true %>
   <% end %>
+
+  <div class="form-group form-inline">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <label>チャット埋め込みの許可ホスト</label><br />
+      </div>
+      <div class="panel-body">
+        <div id="bot-allowed-hosts">
+          <%= f.fields_for :allowed_hosts do |nf| %>
+            <%= nf.select :scheme, AllowedHost.schemes.keys, class: 'form-control', hide_label: true %>
+            <%= nf.text_field :domain, class: 'form-control', hide_label: true, placeholder: '*.example.com' %>
+            <%= nf.link_to_remove '削除', class: 'btn btn-danger', data: { confirm: '本当に削除してよろしいですか？' } %>
+            <hr />
+          <% end %>
+        </div>
+        <%= f.link_to_add '許可ホストを追加', :allowed_hosts, class: 'btn btn-default', data: { target: '#bot-allowed-hosts' } %>
+        <p class="help-block">
+          ※１つも登録がない場合すべてのホストに対して埋め込みが許可されます<br />
+          ※追加と削除を行ったら必ず更新するボタンを押してください<br />
+          ※サブドメインは <code>*</code> で全てにマッチできます（例：*.example.com）サブドメイン無しにも適用されます
+        </p>
+      </div>
+    </div>
+  </div>
 
   <div class="actions">
     <%= f.submit class: 'btn btn-success' %>
