Update explain text

--- a/app/views/bots/_form.html.erb
+++ b/app/views/bots/_form.html.erb
@@ -39,7 +39,7 @@
         <p class="help-block">
           ※１つも登録がない場合すべてのホストに対して埋め込みが許可されます<br />
           ※追加と削除を行ったら必ず更新するボタンを押してください<br />
-          ※サブドメインは <code>*</code> で全てにマッチできます（例：*.example.com）サブドメイン無しにも適用されます
+          ※サブドメインは <code>*</code> で全てにマッチできます（例：*.example.com）サブドメイン無しは個別に登録する必要があります
         </p>
       </div>
     </div>
