--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,7 @@
 /*
  *= require jquery-ui
  *= require bootstrap-tagsinput
+ *= require toastr
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
