--- a/app/views/threads/index.html.erb
+++ b/app/views/threads/index.html.erb
@@ -2,8 +2,10 @@
 
 <div>
   <ul class="nav nav-pills">
-    <li role="presentation" class="<%= 'active' if params[:filter].blank? %>"><%= link_to '全て', bot_threads_path(@bot), data: { event_name: 'Open all threads', bot_id: @bot.id, bot_name: @bot.name } %></li>
+    <li role="presentation" class="<%= 'active' if params[:filter].blank? && params[:good].blank? && params[:bad].blank? %>"><%= link_to '全て', bot_threads_path(@bot), data: { event_name: 'Open all threads', bot_id: @bot.id, bot_name: @bot.name } %></li>
     <li role="presentation" class="<%= 'active' if params[:filter].present? %>"><%= link_to '回答失敗のみ', bot_threads_path(@bot, filter: 1), data: { event_name: 'Open failed threads', bot_id: @bot.id, bot_name: @bot.name } %></li>
+    <li role="presentation" class="<%= 'active' if params[:good].present? %>"><%= link_to 'Goodがある対話', bot_threads_path(@bot, good: 1), data: { event_name: 'Open good threads', bot_id: @bot.id, bot_name: @bot.name } %></li>
+    <li role="presentation" class="<%= 'active' if params[:bad].present? %>"><%= link_to 'Badがある対話', bot_threads_path(@bot, bad: 1), data: { event_name: 'Open bad threads', bot_id: @bot.id, bot_name: @bot.name } %></li>
   </ul>
 </div>
 <br />
@@ -26,6 +28,12 @@
         <td>
           <% if chat.has_answer_failed_message? %>
             <i class="glyphicon glyphicon-warning-sign text-warning"></i>
+          <% end %>
+          <% if chat.has_good_answer? %>
+            <i class="fa fa-thumbs-up text-success"></i>
+          <% end %>
+          <% if chat.has_bad_answer? %>
+            <i class="fa fa-thumbs-down text-danger"></i>
           <% end %>
         </td>
         <td>
