Add vertical-align style helper

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,7 @@
 
 @import "compass/utilities/general/clearfix";
 @import "common/variables";
+@import "helpers/**/*";
 @import "modules/**/*";
 
 html {
