--- a/app/views/answers/index.html.slim
+++ b/app/views/answers/index.html.slim
@@ -11,7 +11,7 @@ table.table.table-striped
       th
   tbody
 
-    - if @answers.count > 0
+    - if @answers.any?
       - @answers.each do |answer|
         tr
           td = answer.headline
