--- a/app/views/layouts/shared/ui/_header.html.erb
+++ b/app/views/layouts/shared/ui/_header.html.erb
@@ -29,7 +29,7 @@
             <% if policy(:word_mapping).index? %>
               <li><%= link_to "同義語一覧", word_mappings_path, data: { event_name: 'Open word mapping index', bot_id: @bot.try(:id), bot_name: @bot.try(:name) } %></li>
             <% end %>
-            <% if policy(:user).edit? %>
+            <% if policy(current_user).edit? %>
               <li><%= link_to 'パスワード変更', edit_user_registration_path, data: { event_name: 'Open edit password', bot_id: @bot.try(:id), bot_name: @bot.try(:name) } %></li>
             <% end %>
             <li><%#= link_to "管理者画面", rails_admin_path %></li>
