ヘッダーの名称を変更

--- a/app/views/threads/index.html.erb
+++ b/app/views/threads/index.html.erb
@@ -15,7 +15,7 @@
     <tr>
       <th>ID</th>
       <th></th>
-      <th>対話数</th>
+      <th>セット数</th>
       <th>本文</th>
       <th nowrap="nowrap">最終発言日時</th>
       <th></th>
