複数件のメッセージをもつchatレコードを取得時に対話セット数も同時に取得

--- a/app/views/threads/index.html.erb
+++ b/app/views/threads/index.html.erb
@@ -39,9 +39,7 @@
         </td>
         <td>
           <% messages = chat.messages.order('id desc') %>
-          <%=
-            messages.exchanging_messages_count
-          %>
+          <%= chat[:exchanging_messages_count] %>
         </td>
         <td>
           <%= '...<br />'.html_safe if messages.count > 3 %>
