--- a/app/views/question_answers/_form.html.slim
+++ b/app/views/question_answers/_form.html.slim
@@ -1,8 +1,9 @@
 - data = @question_answer.persisted? ? { event_name: 'Update question answer', question_answer_id: @question_answer.id, bot_id: @bot.id, bot_name: @bot.name } : {}
 
 span(
-  data-bot-id=@bot.id
   data-component="QuestionAnswerForm"
+  data-bot-id=@bot.id
+  data-id=@question_answer.id
 )
 
 = bootstrap_form_for [@bot, @question_answer], data: data do |f|
