Make base of ChatApp component

--- a/app/views/chats/show.html.slim
+++ b/app/views/chats/show.html.slim
@@ -1,3 +1,7 @@
+span(
+  data-component="ChatApp"
+)
+
 .chat-container.chat-area
   - @chat.messages.each_with_index do |message, i|
     - if message.bot?
