Add typography style to .chat-area

--- a/app/assets/stylesheets/modules/chat/area.scss
+++ b/app/assets/stylesheets/modules/chat/area.scss
@@ -1,4 +1,7 @@
 .chat-area {
   padding-top: 47px;
   padding-bottom: 150px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  letter-spacing: 1px;
 }
