Fix .chat-container style

--- a/app/assets/stylesheets/modules/chat/container.scss
+++ b/app/assets/stylesheets/modules/chat/container.scss
@@ -5,7 +5,7 @@
   margin: 0 auto;
   max-width: 720px;
 
-  @media (max-width: $screen-xxs-max) {
+  @media (max-width: $screen-xs-max) {
     padding-right: 10px;
     padding-left: 7px;
   }
